# leadspot-ai

./: .env.example  .env.space-agent.example  .gitignore  .pre-commit-config.yaml  AUDIT.md  CLAUDE.md  DOCKER_SETUP_SUMMARY.md  FILES_CREATED.md  HANDOFF_SESSION_2025-12-24.md  HANDOFF_WORKFLOW_AUTOMATION.md  Makefile  QUICK_START.md  README.md  SESSION_HANDOFF_2026-03-29.md  SESSION_HANDOFF_2026-03-29_afternoon.md  SMOKE_TEST.md  docker-compose.dev.yml  docker-compose.yml  start.sh  stop.sh
backend/: .dockerignore  .env.example  .env.production  .gitignore  ADMIN_PANEL_IMPLEMENTATION.md  ADMIN_QUICK_REFERENCE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INGESTION_SETUP.md  MONITORING_CHEATSHEET.md  MONITORING_IMPLEMENTATION_SUMMARY.md  MONITORING_QUICKSTART.md  MONITORING_README.md  OAUTH_IMPLEMENTATION_SUMMARY.md  OAUTH_INTEGRATION_README.md  QUERY_PIPELINE_README.md  QUICK_OAUTH_REFERENCE.md  README.md  SETUP_COMPLETE.md  SKILL.md  TESTING_ANALYSIS.md  TESTING_QUICK_REFERENCE.md  TEST_RESULTS_2025-12-24.md  alembic.ini  pyproject.toml  railway.toml  requirements-monitoring.txt  requirements-query-pipeline.txt  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 20251204_1446_13bdb59bc299_initial_schema_baseline.py  20251208_add_password_reset_tokens.py  20251224_add_white_label_fields.py  20260327_add_stripe_billing_fields.py  20260408_add_contacts_table.py  20260408_add_email_tracking_and_suppressions.py  20260427_1750_e85da1d8e500_add_is_demo_and_demo_seeded_at.py  20260428_1500_ghostlog_init_signals.py  20260428_1700_ghostlog_digest.py  20260428_1700_phase2_privacy_polish.py  20260428_1900_phase3_chat_telemetry.py  20260428_2100_space_agent_init.py  20260716_1600_cre_leasing_pipeline.py  20260716_1700_email_messages_deal_suggestions.py  20260717_1300_unified_inbox_phase_a.py  20260717_1500_unified_inbox_phase_b.py  20260717_1700_unified_inbox_phase_c.py  20260717_1900_chat_messages.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  main_example.py  seed.py
backend/app/config/: __init__.py  settings.py  subscription_tiers.py
backend/app/core/: exceptions.py  logging.py  metrics.py  permissions.py  prompts.py
backend/app/integrations/: __init__.py  base.py  demo_data.py  gmail.py  google_drive.py  mautic.py  registry.py  slack.py  sync_manager.py
backend/app/middleware/: __init__.py  audit.py  error_handler.py  metrics.py  rate_limiter.py  request_id.py  security.py
backend/app/models/: __init__.py  audit_log.py  calendar_event.py  campaign.py  chat_message.py  chat_telemetry.py  contact.py  daemon_credential.py  daemon_token_usage.py  deal.py  deal_suggestion.py  decision.py  digest_unmatched_sample.py  document.py  email.py  email_alias.py  email_category.py  email_event.py  email_message.py  merge_redirect.py  oauth_connection.py  organization.py  password_reset.py  query.py  segment.py  signal.py  signal_tombstone.py  style_profile.py  suppression.py  user.py
backend/app/routers/: __init__.py  admin.py  admin_cost_dashboard.py  admin_purge.py  agency.py  agent_proxy.py  auth.py  billing.py  calendar.py  (+38 more)
backend/migrations/: 001_create_oauth_connections.sql  002_add_query_analytics_fields.sql  003_create_decisions.sql  004_knowledge_health.sql  005_audit_logs.sql
backend/scripts/: ghostlog_e2e_smoke.py  seed_kane_demo.py
backend/tasks/: admin-todo.md  todo.md
backend/tests/: conftest.py  test_admin_purge.py  test_auth_endpoints.py  test_auth_password_reset.py  test_contacts_sync.py  test_conv_ai.py  test_daemon_auth_service.py  test_daemon_cost.py  test_deal_status_agent.py  test_digest_service.py  test_email_classifier.py  test_email_insights_service.py  test_email_normalize.py  test_gmail_inbox_sync.py  test_gmail_integration.py  test_manual_ingest.py  test_outlook_sync.py  test_query_pipeline.py  test_reply_drafter.py  test_rtbf.py  test_signals_router.py  test_tombstones.py
(+470 files in other folders)
