[project]
name = "innosynth-backend"
version = "0.1.0"
description = "Innosynth.ai Backend - Enterprise Knowledge Synthesis Platform"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Enable recommended rule sets
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "RUF",    # ruff-specific rules
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults (FastAPI Depends)
    "B904",   # Within an except clause, raise exceptions with `raise ... from err`
    # Pre-existing violations, suppressed 2026-07-17 to unblock CI. Fixing these
    # requires judgment (DTZ = naive→aware datetime behavior change; E712 = SQLAlchemy
    # `== True` filters are intentional). Remove entries as categories get cleaned up.
    "DTZ",    # naive datetime usage (226+ utcnow() sites — behavior-risky bulk change)
    "E402",   # module import not at top of file (often intentional in routers/scripts)
    "E712",   # == True/False comparisons (intentional in SQLAlchemy filters)
    "F841",   # unused variable
    "B007",   # unused loop control variable
    "B905",   # zip() without strict=
    "SIM102", "SIM103", "SIM105", "SIM108",  # style simplifications
    "C401", "C414", "C416",                  # comprehension style
    "UP042",  # str-enum replacement (behavior change in py3.11+ str())
    "RUF006", "RUF012", "RUF013", "RUF059",  # typing/style cleanups
]

# Exclude generated/vendor files
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "migrations/versions",
    "alembic/versions",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["S101"]      # Allow assert in tests

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # Skip assert_used (common in FastAPI)
